<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">魔法书</string>
    <string name="title">魔法钢琴</string>
    <string name="happybirthday">生日快乐\n556517 556521  5553176 443121</string>
    <string name="stars">小星星 \n1155665 4433221 5544332 5544332 1155665 4433221</string>
    <string name="twotigers">两只老虎\n1231 1231 345 345 565431 565431 35\-1 35\-1</string>
    <string name="ding">铃儿响叮当\n333 333 35123 4444 4333 32212 5 333 333 35123 4444 4333 55421</string>
    <string name="mom">世上只有妈妈好\n6535+1 65 6 356532 16\- 53 2 223556 32 1 53 21 6\-1 5\-</string>
    <string name="brush">我是一个粉刷匠\n5353531 24325 5353531 24321 2244315 24325 5353531 24321</string>
    <string name="schooling">上学歌\n12315 66+165 66+1563 653531231</string>
    <string name="author">华南师范大学软件学院</string>
    <integer-array name="SelectedStrPic">
        <item>@drawable/shouye1</item>
        <item>@drawable/ziyuan1</item>
        <item>@drawable/tianjia1</item>
        <item>@drawable/xinxi1</item>
        <item>@drawable/geren1</item>
    </integer-array>
    <integer-array name="UnselectedStrPic">
        <item>@drawable/shouye2</item>
        <item>@drawable/ziyuan2</item>
        <item>@drawable/tianjia2</item>
        <item>@drawable/xinxi2</item>
        <item>@drawable/geren2</item>
    </integer-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="song_bofore_cut">剪辑前的曲子</string>
    <string name="song_after_cut">剪辑后的曲子</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_phone">请输入您的电话号码</string>
    <string name="prompt_password">请输入您的密码</string>
    <string name="action_sign_in">登录</string>
    <string name="fengefu">|</string>
    <string name="action_register_in">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>